# n8n-unihook

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/adr/: 003-provider-api-interception-and-db-backed-triggers.md
scripts/: n8n-test-entrypoint.sh  run-integration-tests.sh
src/: config.rs  crypto.rs  db.rs  main.rs
src/github/: triggers.rs
src/jira/: mod.rs  models.rs  triggers.rs
src/n8n/: client.rs  models.rs
src/router/: github.rs  jira.rs  mod.rs  slack.rs  zoom.rs
src/routes/: jira.rs  mod.rs  provider_github.rs  provider_jira.rs  slack.rs  zoom.rs
src/slack/: models.rs  triggers.rs
src/zoom/: models.rs  triggers.rs
tests/integration/: mod.rs  test_event_routing.rs  test_github_routing.rs  test_jira_routing.rs  test_slack_routing.rs  test_zoom_routing.rs
tests/integration/common/: docker.rs  jira.rs  mod.rs  n8n_client.rs  slack.rs  zoom.rs
tests/integration/mock-apis/: nginx.conf
tests/integration/mock-jira/: nginx.conf
tests/integration/workflows/: any_event_trigger.json  channel_specific_trigger.json  jira_comment_trigger.json  jira_issue_trigger.json  jira_wildcard_trigger.json  message_trigger.json  reaction_trigger.json  zoom_meeting_started_trigger.json  zoom_recording_trigger.json  zoom_wildcard_trigger.json
