[package]
name = "n8n-slack-unihook"
version = "0.1.2"
edition = "2024"
description = "A Slack event router for n8n that enables multiple workflows to share a single Slack app webhook"
license = "MIT"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# HTTP client for forwarding requests to n8n
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
envy = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
parking_lot = "0.12"
futures = "0.3"

# Error handling
thiserror = "2"

[dev-dependencies]
# For integration tests
tokio-test = "0.4"
# Reqwest with cookies for test session management
reqwest = { version = "0.13", features = ["json", "cookies"] }
# For Slack signature computation in tests
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
