[package]
name = "n8n-unihook"
version = "0.4.0"
edition = "2024"
description = "A Slack event router for n8n that enables multiple workflows to share a single Slack app webhook"
license = "MIT"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# HTTP client for forwarding requests to n8n
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
envy = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
parking_lot = "0.12"
futures = "0.3"

# Error handling
thiserror = "2"

# Cryptography (HMAC-SHA256 for GitHub webhook signature re-signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# SQLite database (webhook secret storage & trigger metadata)
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
# For integration tests
tokio-test = "0.4"
# Reqwest with cookies for test session management
reqwest = { version = "0.13", features = ["json", "cookies"] }
# For Slack signature computation in tests
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# Mock HTTP server for unit tests
wiremock = "0.6"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
